git commit -m 'add nav menu, font, background'

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "^21.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
@@ -40,7 +41,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcfrezal/defiwindapp.git"
@@ -50,5 +50,8 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marcfrezal/defiwindapp/issues"
+  },
+  "devDependencies": {
+    "sass": "^1.71.1"
   }
 }
